microservices/deploy/service-mesh/istio/gateway/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testing-yuya-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "testing-yuya.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testing-yuya
spec:
  hosts:
  - "testing-yuya.com"
  gateways:
  - testing-yuya-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 5000
  - match:
    - uri:
        exact: /details
    route:
    - destination:
        host: details-service
        port:
          number: 7777
  - match:
    - uri:
        exact: /payment
    route:
    - destination:
        host: payment-service
        port:
          number: 8888
  - match:
    - uri:
        exact: /reviews
    route:
    - destination:
        host: reviews-service
        port:
          number: 9999
