microservices/deploy/service-mesh/istio/gateway/istio-ingress.yaml
###########################################################################
# Ingress resource (gateway)
##########################################################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend-service
            port:
              number: 5000
      - path: /review
        pathType: Prefix
        backend:
          service:
            name: review-service
            port:
              number: 9999
      - path: /payment
        pathType: Exact
        backend:
          service:
            name: payment-service
            port:
              number: 8888
---
